# CircuitPython_RGB_LED_HTTPServer

./: .pylintrc  API_DOC.rst  LICENSE  README.rst  README.rst.license  notes.txt  notes.txt.license  pyproject.toml  requirements.txt  rgb_led_httpserver.py
.github/workflows/: release_gh.yml
docs/: api.rst  api.rst.license  conf.py  examples.rst  index.rst
examples/: rgb_led_httpserver_simpletest.py
examples/client/cpython/: fill.py  fill_dotstars.py  get_pixels.py  init_animation_chase.py  init_animation_chase_dotstars.py  init_animation_customcolorchase_dotstars.py  init_dotstars.py  init_neopixels.py  set_brightness_dotstars.py  set_pixels.py  set_pixels_dotstars.py  setprop_animation_chase.py  setprop_animation_chase_dotstars.py  setprop_animation_comet_dotstars.py  start_animation_chase.py  start_animation_chase_dotstars.py  start_animation_comet_dotstars.py
examples/client/curl/: init_neopixels.sh
examples/client/jetbrains_http/: animation_setprop_speed.http  auto_write.http  brightness.http  fill.http  full_test.http  init_animation.http  init_animation_colorcycle.http  init_animation_comet.http  init_animation_pulse.http  init_animation_rainbow.http  init_dotstars.http  init_neopixel_builtin.http  init_neopixels.http  init_pixels_and_start_animation.http  invalid_init_neopixels.http  pixels.http  pixels_dotstar.http  start_animation.http  start_animation_builtin.http  write.http
examples/startup_actions/: example_startup_actions.json
